# cc_hud_esp32

./: .gitignore  CLAUDE.md  README.en.md  README.md  cc_hud_back_cover.3mf  cc_hud_back_cover.py  cc_hud_back_cover.step  cc_hud_case.3mf  cc_hud_case.py  cc_hud_case.step
docs/: build-guide.html
firmware/: partitions_ota_8mb.csv  platformio.ini
firmware/include/: lv_conf.h
firmware/sketch_hello/: sketch_hello.ino
firmware/src/: battery.cpp  battery.h  ble_server.cpp  ble_server.cpp.disabled  ble_server.h  button.cpp  button.h  claude_star_frames.h  config.h  display.cpp  display.h  font_cn_20.c  led_ring.cpp  led_ring.h  logo_brand.h  lvgl_spike.cpp  lvgl_spike.h  lvgl_ui.cpp  lvgl_ui.h  main.cpp  (+9 more)
host/: DAEMON.md  HOOKS_SETUP.md  README.md  cchud-codex-dispatch.sh  cchud-codex-notify.sh  cchud-emit.sh  cchud-hook.sh  cchud-idle.sh  cchud-quota-push.sh  cchud-statusline.sh  cchud-update.sh  com.cchud.push.plist  demo_moods.py  force_idle.py  io.cchud.daemon.plist  ota.py  push_idle.py  push_quota.py  push_state.py  push_wifi.py  pyproject.toml  requirements.txt  settings.hooks.example.json
host/cchud_daemon/: aggregator.py  ble_link.py  cli.py  codec.py  daemon.py  event.py  quota_tracker.py  registry.py  session_store.py  socket_server.py
host/cchud_daemon/adapters/: base.py  claude.py  codex.py
host/tests/: test_aggregator.py  test_ble_link.py  test_claude_adapter.py  test_cli_install.py  test_codec.py  test_codex_adapter.py  test_daemon_pipeline.py  test_quota_tracker.py  test_registry.py  test_session_store.py  test_socket_server.py
images/: README.md
(+8 files in other folders)
